Got grid to work (shaking and crying and cheering)
AAAAAAHAHAHHAHAHA HYES YES YES YES

Realized I had to make my items direct children of grid_container, so I moved them out of main and now it works

--- a/phase01_build-to-spec/style.css
+++ b/phase01_build-to-spec/style.css
@@ -2,32 +2,21 @@
     display: grid;
 }
 
-@media screen and (max-width: 450) {
-    body {
-        width: auto;
-    }
-    .grid_container{
-        grid-template-columns:max-content;
-        grid-template-rows: max-content;
-    }
-}
-@media screen and (min-width: 800) {
-    body {
-        width:auto;
-    }
-    .grid_container {
-        grid-template-columns: 5% 20% 25% 45% 5%;
-        grid-template-rows: 10% 30% 10% 25% 25%;
-    }
+body{
+    width: 1000px
 }
 .grid_container {
-    grid-template-columns: 5% 20% 25% 45% 5%;
-    grid-template-rows: 10% 30% 10% 25% 25%;
+    display: grid;
+    grid-template-columns: 5vmin 20vmin 25vmin 45vmin 7.5vmin;
+    grid-template-rows: 10vmin 30vmin 10vmin 25vmin 25vmin;
 }
 
 #title {
-    grid-area: 1 / 1 / 2 / 4;
+    grid-area: 1 / 1 / span 1 / span 3;
+    width:100%;
+    height: 100%;
     background-color: red;
+
 }
 
 #date {
