--- a/phase01_version02/style.css
+++ b/phase01_version02/style.css
@@ -2,6 +2,7 @@
 
 .grid_container {
     display: grid;
+    grid-template-rows: 5% 1% 4% 80% 10%;
     background-color: yellow;
 }
 
@@ -10,8 +11,13 @@ body {
     padding: 0% 0% 0% 0%;
 }
 
-header {
+#page_title {
     color: black;
+    grid-row: 1 / 2;
+}
+
+#navbar {
+    grid-row: 3/4;
 }
 
 main {
