--- a/version1.5/style.css
+++ b/version1.5/style.css
@@ -19,7 +19,6 @@ main {
 
 article {
     padding: 0.5rem;
-
     margin: 0rem 2rem 1rem 2rem;
 }
 
@@ -31,10 +30,12 @@ article {
 #navbar {
     align-self: center;
 }
-
-.a_bio {
-    list-style-type: none;
-    margin: 0rem;
+#a_title{
+    text-align: center;
+}
+#img_Liz {
+    margin: auto;
+    width: 60%;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -57,9 +58,80 @@ article {
     #navbar {
         align-self: center;
     }
+}
 
-    .a_bio {
-        list-style-type: none;
-      
-    }
+/*Google Fonts*/
+.young-serif-regular {
+    font-family: "Young Serif", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.lateef-extralight {
+    font-family: "Lateef", serif;
+    font-weight: 200;
+    font-style: normal;
+}
+
+.lateef-light {
+    font-family: "Lateef", serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.lateef-regular {
+    font-family: "Lateef", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.lateef-medium {
+    font-family: "Lateef", serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.lateef-semibold {
+    font-family: "Lateef", serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.lateef-bold {
+    font-family: "Lateef", serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.lateef-extrabold {
+    font-family: "Lateef", serif;
+    font-weight: 800;
+    font-style: normal;
+}
+
+.karla-extralight {
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+}
+
+.karla-regular {
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.karla-bold {
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.barriecito-regular {
+    font-family: "Barriecito", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
