--- a/version1.5/style.css
+++ b/version1.5/style.css
@@ -2,7 +2,6 @@
 .grid_container {
     display: flex;
     flex-flow: column wrap;
-    /*Title, gap, NavBar, Main, Footer*/
     background-color: rgb(150, 150, 150);
 }
 
@@ -15,27 +14,84 @@ main {
     align-items: flex-start;
 }
 
-
-
+/*Formatting for all Articles*/
 article {
     padding: 0.5rem;
     margin: 0rem 2rem 1rem 2rem;
 }
 
+/*The Home of Liz Andrade*/
 #page_title {
     color: black;
     align-self: center;
 }
 
+/*Navbar for section links*/
 #navbar {
     align-self: center;
 }
-#a_title{
-    text-align: center;
+
+/*Article/Section titles*/
+.a_title {
+    align-self: center;
 }
-#img_Liz {
-    margin: auto;
-    width: 60%;
+
+/*Liz image in Article02*/
+#liz_bio {
+    /**/
+    padding: 1rem 1rem 1rem 1rem;
+    margin: 1rem 1rem 1rem 1rem;
+    width: 50%;
+    height: 40%;
+    align-self: center;
+
+    /*Text Styling*/
+    color: lightcyan;
+    text-shadow: 2px 2px 3px black;
+    list-style-type: none;
+    text-align: center;
+
+    background-image: url("media/bio_Liz.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#marielle_bio {
+    padding: 1rem 1rem 1rem 1rem;
+    margin: 1rem 1rem 1rem 1rem;
+    width: 50%;
+    height: 40%;
+    align-self: center;
+
+    color: lightcyan;
+    text-shadow: 2px 2px 3px black;
+    list-style-type: none;
+    text-align: center;
+
+    background-image: url("media/bio_Marielle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+#rui_bio {
+    padding: 1rem 1rem 1rem 1rem;
+    margin: 1rem 1rem 1rem 1rem;
+    width: 50%;
+    height: 40%;
+    align-self: center;
+
+    color: lightcyan;
+    text-shadow: 2px 2px 3px black;
+    list-style-type: none;
+    text-align: center;
+
+    background-image: url("media/bio_Rui.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 @media only screen and (min-width: 1024px) {
